Finish most of basic frontend for profile page, except edit profile details, notifications, and settings

--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -46,10 +46,45 @@
   display: flex;
   justify-content: space-between;
 }
-.profile-card {
-  display: flex;
-  border-top: 1px solid grey;
+
+.option-grid {
+    border-top: 1px solid grey;
 }
-.profile-card:hover {
+
+.option-card {
+  display: flex;
+  border-bottom: 1px solid grey;
+}
+.option-card:hover {
   transform: scale(1.03);
+}
+
+.profile-grid {
+    border-top: 1px solid grey;
+}
+
+.profile-card {
+    display: flex;
+    border-bottom: 1px solid grey;
+    align-items: center;
+}
+
+.detail {
+    color: gray;
+    margin-left: auto;
+    margin-right: 1em;
+}
+
+.profile-buttons {
+    margin: 1em 1em;
+}
+
+a {
+    overflow: visible;
+    width: 4.2em;
+}
+
+#back-arrow {
+    width: 100%;
+    height: 100%;
 }
